# Project3-CUDA-Path-Tracer

./: .gitignore  BUILD_VARIANTS.md  CMakeLists.txt  README.md
docs/: OUTPUT_STRUCTURE.md  benchmarking-guide.md  bloom-design.md  direct-lighting-design.md  postprocess-effects-design.md  refraction-design.md  rng-design.md
scenes/: FlatWhite.json  FurnaceDiffuse.json  FurnaceGlass.json  FurnaceGlossy.json  FurnaceMirror.json  closed_cornell_inside.json  cornell.json  cornellGlossy.json  cornellRefra.json  cornellRefra_invsphere.json  cornell_16iter.json  cornell_boxes.json  cornell_closed.json  cornell_dof.json  cornell_invsphere.json  cornell_ref.json  cornell_ref_lcg.json  cornell_sort_test.json  courtyard.json  full_mirror_room.json  gallery.json  highlightstretch.json  large_refractive_room.json  light_test.json  mesh_enclosed.json  mirror_test.json  nothing.json  refraction_test.json  sphere.json  sphere_gallery.json  sweeproughness.json  sweeproughness_row.json  test_geo.json  thin_specular_spheres.json
scripts/: analyze_rng.py  benchmark_runner.py  compare_convergence.py  plot_comparison.py  plot_fps.py  plot_kernel_breakdown.py  plot_path_survival.py  profiler_utils.py
src/: cli.h  config.cpp  config.h  constants.h  image.cpp  interactions.cu  interactions.h  intersections.h  logger.h  main.cpp  pathtrace.cu  pathtrace.h  profiler.cu  profiler.h  rng.h  scene.cpp  scene.h  sceneStructs.h  scene_loader.cpp  scene_loader.h  utilities.cu  utilities.h  window_setup.h
src/ImGui/: CMakeLists.txt
src/interactions/: interactions.cu  interactions.h
src/intersection/: intersections.h  triangle.h
src/kernels/: accumulation.cuh  intersection.cuh  ray_generation.cuh  shading.cuh
src/lighting/: light_sampling.h
src/pipeline/: compact.cuh  postprocess.cuh  sort.cuh
src/postprocess/: bloom.cuh  chromatic_aberration.cuh  tonemap.cuh  vignette.cuh
src/profiler/: profiler.cu  profiler.h
src/rng/: rng.h
src/stream_compaction/: CMakeLists.txt  common.cu  common.h  efficient.cu  efficient.h
stream_compaction/: CMakeLists.txt  common.cu  common.h  efficient.cu  efficient.h  kernel_config.h
tests/config_test/: CMakeLists.txt  config_test.cu
tests/rng_test/: CMakeLists.txt  rng_compare.cu
